Adding DepartmentsController using CRUD Scaffolding

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-c5a9eba5-01a3-4364-b769-1047b6814bdd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
